package zhw.designpattern.factory.staticfactory;

public interface Human {
    void laugh();
    void cry();
    void talk();
}
