package zhw.service;

public interface HumanFactory {
    //制造黄色人类
    Human createYellowHuman();

    //制造白色人类
    Human createWhiteHuman();

    //制造黑色人类
    Human createBlackHuman();
}
